--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "hi2-chat-bot",
-  "version": "0.1.4",
-  "description": "TG的私聊机器人",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "TG私聊机器人",
+  "main": "index.mjs",
+  "type": "module",
   "scripts": {
-    "pro": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index.mjs",
+    "dev": "cross-env NODE_ENV=development node index.mjs"
   },
   "keywords": [],
   "author": "hi2hi",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.14.2",
     "node-telegram-bot-api": "^0.66.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   },
   "repository": {
     "type": "git",
