🐛 修复 Docker 构建工作流
- 更正 Dockerfile 路径，从 next/Dockerfile 改为根目录的 Dockerfile
- 确保 Docker 镜像构建正确

--- a/.github/workflows/docker-build-next.yml
+++ b/.github/workflows/docker-build-next.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t ghcr.io/${{ github.repository }}:$VERSION -f next/Dockerfile .
+        docker build -t ghcr.io/${{ github.repository }}:$VERSION -f Dockerfile .
 
     - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
