🔧 修正仓库地址

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hi2shark/nazhua"
+    "url": "https://github.com/hi2shark/hi2-chat-bot"
   }
 }
