--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "hi2hi",
   "license": "MIT",
   "dependencies": {
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "mongodb": "^6.14.2",
     "node-telegram-bot-api": "^0.66.0"
