🚀 2.2.1 添加是否告知对方被拉黑的环境变量设置

--- a/env.example
+++ b/env.example
@@ -62,6 +62,9 @@ OPENAI_MODEL=gpt-3.5-turbo
 # AI审核提示词文件路径（为空则使用默认提示词）
 AI_AUDIT_PROMPT_FILE=/app/ai-audit-prompt.txt
 
+# 是否通知被AI拉黑的用户（1=通知，0=不通知）
+AI_AUDIT_NOTIFY_USER=0
+
 # ===========================================
 # 日志配置（可选）
 # ===========================================
