🚀 2.3.0 新增人机验证 - 新增人机验证功能，支持图形验证码验证，防止机器人骚扰，并更新相关配置和指令说明。

--- a/env.example
+++ b/env.example
@@ -37,8 +37,27 @@ MESSAGE_CLEAR_HOURS=720
 # 隐藏启动消息（1=隐藏，0或留空=不隐藏）
 HIDE_START_MESSAGE=0
 
+# 启用 DC Ping 功能（1=启用，0或留空=不启用）
+ENABLE_DC_PING=0
+
 # 时区设置
 TZ=Asia/Hong_Kong
+
+# ===========================================
+# 人机验证配置（可选）
+# ===========================================
+
+# 是否启用人机验证功能（1=启用，0=不启用）
+CAPTCHA_ENABLED=0
+
+# 最大重试次数（验证码输入错误的最大次数）
+CAPTCHA_MAX_RETRIES=3
+
+# 验证失败后的动作（ban=拉黑，block=仅禁止发消息）
+CAPTCHA_FAIL_ACTION=ban
+
+# 验证码有效期（单位：秒，默认180秒=3分钟）
+CAPTCHA_TIMEOUT=180
 
 # ===========================================
 # AI审核配置（可选）
