更新 Dockerfile，添加字体和依赖以支持 @napi-rs/canvas 渲染文本；更新 GitHub Actions 工作流以创建发布版本。

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -50,3 +50,23 @@ jobs:
         docker push ghcr.io/${{ github.repository }}:$VERSION
         docker tag ghcr.io/${{ github.repository }}:$VERSION ghcr.io/${{ github.repository }}:latest
         docker push ghcr.io/${{ github.repository }}:latest
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        tag_name: ${{ github.ref_name }}
+        name: Release ${{ env.VERSION }}
+        body: |
+          ## 更新内容
+          - Docker 镜像版本: `${{ env.VERSION }}`
+          - Docker 镜像地址: `ghcr.io/${{ github.repository }}:${{ env.VERSION }}`
+          
+          ## 使用方法
+          ```bash
+          docker pull ghcr.io/${{ github.repository }}:${{ env.VERSION }}
+          ```
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
