--- a/env.example
+++ b/env.example
@@ -64,6 +64,8 @@ CAPTCHA_TIMEOUT=180
 # ===========================================
 
 # 是否启用AI审核功能（1=启用，0=不启用）
+# 注意：与CAPTCHA_ENABLED同时启用时自动开启智能审核模式
+# 智能模式下，AI会区分广告（拉黑）、无意义内容（触发人机验证）和正常内容
 AI_AUDIT_ENABLED=0
 
 # 需要审核的消息次数（新用户前N条消息）
